<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_neonavigation</name>
  <version>0.0.0</version>
  <description>The turtlebot3_neonavigation package</description>

  <maintainer email="tiryoh@gmail.com">Daisuke Sato</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>amcl</depend>
  <depend>emcl</depend>
  <depend>laser_scan_matcher</depend>
  <depend>map_server</depend>
  <depend>neonavigation</depend>
  <depend>rviz</depend>
  <depend>turtlebot3_bringup</depend>
  <test_depend>roslaunch</test_depend>

</package>
